fix bugs invisible feed in apple products(safari , iPhones, iPads), add to favourite icon in the wrong position, scroll flow

--- a/client/App.sass
+++ b/client/App.sass
@@ -117,10 +117,7 @@ body
     left: -25%
 
   .app
-    display: flex
-    justify-content: center
-    align-items: flex-start
-    flex-wrap: wrap
+    display: block
 
   .hidden
     display: none !important
