--- a/client/components/Heart.sass
+++ b/client/components/Heart.sass
@@ -1,7 +1,7 @@
 .heart
   position: absolute
   margin-top: 13px !important
-  margin-left: 130px !important
+  margin-left: 310px !important
   height: 25px
   overflow: visible
   width: 25px
