--- a/client/containers/FavouritesList.scss
+++ b/client/containers/FavouritesList.scss
@@ -1,9 +1,9 @@
 .favourites-container{
   width: 27% !important;
   position: fixed;
-  z-index: 10;
+  z-index: 200;
   top: 100px;
-  left: 50px;
+  left: 40px;
   background-color: transparent !important;
 
   .panel-header{
