--- a/client/containers/Feed/Feed.sass
+++ b/client/containers/Feed/Feed.sass
@@ -1,10 +1,12 @@
 
 .feed
   padding-top: 50px
-  width: 400px
+  width: 100%
   z-index: 10
   overflow: scroll
   min-height: 100%
+  position: absolute
+  margin:auto
 
   div
     height: auto
@@ -16,8 +18,5 @@
       border-radius: 4px
       min-height: 200px
       z-index: 20
-      display: flex
-      justify-content: center
-      align-items: flex-start
-      flex-wrap: wrap
+      display: block
       margin-bottom: 10px
